# prishlang

./: README.md  pyproject.toml
src/prish/: __init__.py  interpreter.py  lexer.py  main.py  parser.py
